# avery

./: .gitignore  CMakeLists.txt  README.md  limine.conf  linker.ld
.github/workflows/: build.yml
cmake/: x86_64-kernel-toolchain.cmake
docs/: SYSCALLS.md
include/: console.h  tests.h  types.h
include/core/: apic.h  gdt.h  idt.h  irq.h  isr.h  pic.h  regs.h  systems.h
include/drivers/: ata.h  driver.h  keyboard.h  pci.h  pit.h
include/fs/: fat32.h  vfs.h
include/graphics/: framebuffer.h  graphicsTypes.h  vgaFont.h
include/io/: io.h  serial.h
include/kernel/: console.h  debug.h  memory.h
include/kernel/exec/: elf.h  process.h  syscall.h
include/kernel/memory/: physicalMemory.h  virtualMemory.h
kernel/: main.cpp
kernel/core/: debug.cpp  regs.cpp  systems.cpp
kernel/core/gdt/: gdt.cpp
kernel/core/idt/: idt.cpp  idt_load.asm
kernel/core/interrupts/: pic.cpp
kernel/core/interrupts/apic/: controller.cpp  ioapic.cpp  lapic.cpp
kernel/core/interrupts/gdt/: gdt.cpp  gdt_flush.asm  tss_flush.asm
kernel/core/interrupts/idt/: idt.cpp  idt_load.asm
kernel/core/interrupts/irqs/: irq.cpp  irq_stub.asm
kernel/core/interrupts/isrs/: isr.cpp  isr_stubs.asm
kernel/core/interrupts/pic/: lapic.cpp
kernel/core/irqs/: irq.cpp  irq_stub.asm
kernel/core/isrs/: isr.cpp
kernel/core/memory/: addressSpace.cpp  heap.cpp  memory.cpp  pmm.cpp  vmm.cpp
kernel/drivers/: drivers.cpp  mmio.cpp  pci.cpp
kernel/drivers/input/: keyboard.cpp
kernel/drivers/storage/: ata.cpp
kernel/drivers/time/: pit.cpp
kernel/exec/: contextSwitch.asm  elf.cpp  enterUsermode.asm  executable.cpp  process.cpp  scheduler.cpp  syscall_int80_entry.asm  syscalls.cpp  thread.cpp
kernel/fs/: fat32.cpp  vfs.cpp
kernel/graphics/: framebuffer.cpp
kernel/io/: console.cpp  serial.cpp
kernel/tests/: memoryTests.cpp
kernel/utils/: types.cpp
scripts/: bdf_to_header.py  compileAssembly.sh  debug.sh  makeDisk.sh  run.sh
tests/: aYield.asm  bYield.asm  generalProtectionTest.asm  helloWorld.asm  loop.asm  simpleExit.asm
